[package]
name = "twig"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anathema = { path = "../anathema" }
log = "0.4.14"
tinylog = { path = "../tinylog" }
tokio = { version = "1.12.0", features = ["macros"] }

[features]
